
------------------------------------------------------------------------------------------
----                                OpenMS 3.4.0     (under development)              ----
------------------------------------------------------------------------------------------

General:
- OpenMS now expects a compiler that supports C++20

OpenSwath:
- Changes to -out_features (# 7793)
	- Deprecate .tsv feature output
	- Deprecate -out_osw, -out_tsv. -out_features is used for outputting .osw or .featureXML files and file format is autodetected.
	- Enable outputting any feature file (.osw or .featureXML) from a .tsv library 
- Add warning message if irt_im_extraction_window not set and im_window is set (#7813)

Misc:
- pyOpenMS: improve developer experience (installation/compilation) (#7735)
- TOPP tools and TOPPAS/ExecutePipeline return exit code 14 when external third-party tools (such as Comet or Sage) are not found (#7758)
- ProteinInference tool: Algorithm:score_type allows switching the main score (e.g., "RAW", "PEP") for BasicProteinInference. (#7769)

Library:
- IDScoreSwitcherAlgorithm: Added switchToScoreType and switchBackScoreType methods for score switching and reversion. (#7769)

- removed tools:
  - XTandemAdapter

------------------------------------------------------------------------------------------
----                                OpenMS 3.3.0                                      ----
------------------------------------------------------------------------------------------

What's new:
- Changes breaking backward compatibility: 
  - the QualityControl TOPP tool has some renamed parameters and supports output directories (#7497)
- Low-level  peak extraction helper for MSExperiments (#7628)
- pyOpenMS: use Numpy2 (#7539)
- Docker files are now part of the main OpenMS repo (#7303)
- Added new functionality to SageAdapter + compatibility with new Sage versions (#7577)

Library:
- TOPPView: 
  - offer Ion mobility view from 2D spectra view (#7423)