@@ -17,12 +17,9 @@
 #include <iostream>
 
 #ifndef OPENMS_WINDOWSPLATFORM
-#ifdef OPENMS_HAS_UNISTD_H
-#include <unistd.h> // for getpid
-#endif
-#ifdef OPENMS_HAS_PROCESS_H
-#include <process.h>
-#endif
+  #ifdef OPENMS_HAS_UNISTD_H
+  #include <unistd.h> // for getpid
+  #endif
 #endif
 
 #define OPENMS_CORE_DUMP_ENVNAME "OPENMS_DUMP_CORE"
