@@ -16,7 +16,8 @@ PR - Pull Request (on GitHub), i.e. integration of a new feature or bugfix
 
 General:
 - OpenMS now expects a compiler that supports C++20
-
+- OpenMSInfo now informs about custom CXX compile flags (#7846)
+ 
 OpenSwath:
 - Changes to -out_features (# 7793)
 	- Deprecate .tsv feature output
